--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "bootstrap": "^4.5.3",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.1"
+    "react-redux": "^7.2.2",
+    "redux-devtools": "^3.7.0",
+    "styled-components": "^5.2.1",
+    "web3": "^1.3.1"
   }
 }
