--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-redux": "^7.2.2",
     "redux-devtools": "^3.7.0",
     "styled-components": "^5.2.1",
+    "truffle": "^5.1.59",
     "web3": "^1.3.1"
   }
 }
