--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy:ropsten", "truffle deploy --network ropsten-infura --reset"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
