--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@walletconnect/client": "^1.3.3",
+    "@walletconnect/qrcode-modal": "^1.3.3",
+    "@walletconnect/web3-provider": "^1.3.3",
     "accounting-js": "^1.1.1",
     "bootstrap": "^4.5.3",
     "coingecko-api": "^1.0.10",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^6.0.0",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-bootstrap": "^1.4.0",
