--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "styled-components": "^5.2.1",
     "truffle": "^5.1.59",
     "truffle-hdwallet-provider": "^1.0.17",
-    "web3": "^1.3.1"
+    "web3": "^1.3.1",
+    "web3-utils": "^1.3.1"
   }
 }
