--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy:ropsten": "truffle deploy --network ropsten-infura --reset"
+    "deploy:ropsten": "truffle deploy --network ropsten-infura --reset",
+    "deploy": "truffle deploy --reset"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
@@ -29,5 +30,8 @@
     "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.3.1",
     "web3-utils": "^1.3.1"
+  },
+  "devDependencies": {
+    "@openzeppelin/contracts": "^3.4.0"
   }
 }
