--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "deploy:ropsten": "truffle deploy --network ropsten-infura --reset",
+    "compile": "truffle compile",
     "deploy": "truffle deploy --reset"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@walletconnect/qrcode-modal": "^1.3.3",
     "@walletconnect/web3-provider": "^1.3.3",
     "accounting-js": "^1.1.1",
+    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.5.3",
     "coingecko-api": "^1.0.10",
     "dotenv": "^8.2.0",
