--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy:ropsten": "truffle deploy --network ropsten-infura --reset",
     "compile": "truffle compile",
     "deploy": "truffle deploy --reset",
+    "deploy:ropsten": "truffle deploy --network ropsten-infura --reset",
+    "deploy:bsctestnet": "truffle deploy --network bscTestnet --reset",
     "ganache:dev": "ganache-cli -m 'federal infant angry wrist polar million submit bacon machine affair blur feel'",
+    "console": "truffle console",
+    "console:bsctestnet": "truffle console --network bscTestnet",
     "lint": "eslint"
   },
   "dependencies": {
@@ -19,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.5.0",
+    "@truffle/hdwallet-provider": "1.2.2",
     "@walletconnect/client": "^1.3.3",
     "@walletconnect/qrcode-modal": "^1.3.3",
     "@walletconnect/web3-provider": "^1.3.3",
@@ -36,8 +40,7 @@
     "react-redux": "^7.2.2",
     "redux-devtools": "^3.7.0",
     "styled-components": "^5.2.1",
-    "truffle": "^5.1.59",
-    "truffle-hdwallet-provider": "^1.0.17",
+    "truffle": "^5.3.5",
     "web3": "^1.3.1",
     "web3-utils": "^1.3.1"
   },
