--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.0",
     "@truffle/hdwallet-provider": "1.2.2",
     "@walletconnect/client": "^1.3.3",
     "@walletconnect/qrcode-modal": "^1.3.3",
     "@walletconnect/web3-provider": "^1.3.3",
     "accounting-js": "^1.1.1",
-    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.5.3",
     "coingecko-api": "^1.0.10",
     "mangofi-contracts": "^0.0.1",
