--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@walletconnect/qrcode-modal": "^1.3.3",
     "@walletconnect/web3-provider": "^1.3.3",
     "accounting-js": "^1.1.1",
+    "bignumber.js": "^9.0.1",
     "bootstrap": "^4.5.3",
     "coingecko-api": "^1.0.10",
     "mangofi-contracts": "^0.0.1",
