--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .:/app
       - node_modules:/app/node_modules
     env_file:
-      - .env.development.local
+      - .env.development
 
 volumes:
   node_modules:
