--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.0",
-    "@truffle/hdwallet-provider": "1.2.2",
+    "@truffle/hdwallet-provider": "^1.4.0",
     "@walletconnect/client": "^1.3.3",
     "@walletconnect/qrcode-modal": "^1.3.3",
     "@walletconnect/web3-provider": "^1.3.3",
@@ -45,7 +45,7 @@
     "react-redux": "^7.2.2",
     "redux-devtools": "^3.7.0",
     "styled-components": "^5.2.1",
-    "truffle": "^5.3.5",
+    "truffle": "^5.3.9",
     "web3": "^1.3.1",
     "web3-utils": "^1.3.1"
   },
