--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bignumber.js": "^9.0.1",
     "bootstrap": "^4.5.3",
     "coingecko-api": "^1.0.10",
+    "etherscan-api": "^10.0.5",
     "mangofi-contracts": "^0.0.1",
     "next": "10.0.3",
     "node-sass": "^5.0.0",
